# arroyo

./: .gitignore  docker-compose.yml
backend/: Dockerfile  _logging.py  conjunctions.py  main.py  pyproject.toml
backend/public_conjunctions/: __init__.py  _create_new_conj.py  _data.py  _models.py
backend/socrates_comparison/: __init__.py  _create_new_conj.py  _data.py  _expanded_rows_data.py  _models.py  _request_models.py  _response_models.py
frontend/: .env.development  .env.production  Caddyfile  Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.tsx  main.tsx
