[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = 'arroyo'
version = '0.0.1'
description = ""
readme = ''
requires-python = '>=3.10'
dependencies = [
    'numpy >= 2, < 3',
    'polars >= 1.21, < 2',
    'requests >= 2.32, < 3',
    'astropy == 7.*',
    'mizuba >= 0.0.7, < 8',
    'fastapi[standard] == 0.115.*',
]
authors = [{ name = 'Francesco Biscarni', email = 'fbiscani@skylon.dev' }]
license = { text = 'AGPL-3.0-or-later' }
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
]
keywords = ['science', 'math', 'physics', 'astrodynamics', 'aerospace']

[project.urls]
Repository = "https://github.com/skylondev/arroyo"
